--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zana Fishing</title>
+    <link rel="stylesheet" href="index.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,6 +18,7 @@
             color: white;
             padding: 15px;
             text-align: center;
+            
         }
         .container {
             width: 80%;
