uploading an image in the heading

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             justify-content: space-around;
         }
         .product {
-            background: white;
+            background: rgb(107, 23, 23);
             margin: 15px;
             padding: 15px;
             border-radius: 5px;
