--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zana Fishing</title>
     <link rel="stylesheet" href="index.css">
+    
     <script src="redirection-mobile.js"></script>
     <script>
       SA.redirection_mobile({
@@ -66,7 +67,7 @@
         <img src="logo.png" alt="" >
         <a href="#"><button>Főoldal</button></a>
         <a href="termekek.html"><button class="termek">Termékeink</button></a> 
- 
+        <a href="akciok.html"><button>Akciók</button></a>
     </header>
    
     <div class="card1">
