--- a/termekek.html
+++ b/termekek.html
@@ -9,6 +9,7 @@
     <img src="logo.png" alt="" >
     <a href="index.html"><button>Főoldal</button></a>
     <a href="termekek.html"><button class="termek">Termékeink</button></a> 
+    <a href="akciok.html"><button class="akciok">Akciók</button></a>
 
 </header>
 
