--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             text-align: center;
            margin-left: 70%;
-           margin-top: 11%;
+           margin-top: 6%;
           }
           
     div.header {
             background-color: rgb(90, 79, 61);
             color: white;
             padding: 10px;
-            font-size: 13px;
+            font-size: 11px;
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
         }
@@ -46,7 +46,8 @@
             width: 350px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             text-align: center;
-           margin-left: 38%;
+           margin-left: auto;
+           margin-right: auto;
            margin-top: 7%;
            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
            font-size: 18px;
@@ -73,7 +74,7 @@
     <div class="card1">
       <div class="header1">
         <p>
-          Üzletünkben található horgászcikkek széles választéka, emellett árulunk mezőgazdasági termékek, illetve kerékpár alkatrészek.
+          Üzletünkben található horgászcikkek széles választéka, emellett mezőgazdasági termékek, illetve kerékpár alkatrészek.
         </p>
       </div>
     </div>
@@ -82,17 +83,21 @@
 
 <div class="card">
     <div class="header">
-      <h1>Tiszakécske, Szolnoki út 15, 6060
+      <h1><a style="color: white;"  href="http://https://maps.app.goo.gl/SuVxagFop3XqnCUp7">Tiszakécske, Szolnoki út 15, 6060 </a>
     </h1>
     </div>
   
     <div class="container1">
-      <p><a href="tel:06703322145">+36 70 332 2145</a></p>
+      <p><button><a href="tel:06703322145" style="color: white;">Telefon</a></button>
+
+        <br> </br>
+     <button><a href="mailto:zana.tamas.ev@gmail.com" style="color: white;">E-mail</a></button>
+      </p>
     </div>
   </div>
 
 
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.9255239074529!2d20.096237175529208!3d46.93704915856604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474159cafc834267%3A0xa4e37be866e3dd0b!2sHorg%C3%A1szbolt!5e0!3m2!1shu!2shu!4v1740987838800!5m2!1shu!2shu" width="25%" height="25%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d809.9255239074529!2d20.096237175529208!3d46.93704915856604!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474159cafc834267%3A0xa4e37be866e3dd0b!2sHorg%C3%A1szbolt!5e0!3m2!1shu!2shu!4v1740987838800!5m2!1shu!2shu" width="420" height="275"  style="border:0; padding-bottom: 15px; padding-left: 6%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
