--- a/akciok.html
+++ b/akciok.html
@@ -1,3 +1,4 @@
+
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +9,9 @@
 <header>
     <img src="logo.png" alt="" >
     <a href="index.html"><button>Főoldal</button></a>
-    <a href="termekek.html"><button class="akciok">Termékeink</button></a>
-    <a href="akciok.html"><button class="akciok">Akciók</button></a>
-     
-
+    <a href="termekek.html"><button class="termek">Termékeink</button></a> 
+    <a href="akciok.html"><button>Akciók</button></a>
+    <a href="rolunk.html"><button>Rólunk</button></a>
 </header>
 
 <body>
