--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zana Fishing</title>
     <link rel="stylesheet" href="index.css">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
     
     <script src="redirection-mobile.js"></script>
     <script>
@@ -18,12 +16,6 @@
 	});
     </script>
     
-=======
-
->>>>>>> Stashed changes
-=======
-
->>>>>>> Stashed changes
 </head>
 <style>
     div.card {
@@ -77,6 +69,7 @@
         <a href="#"><button>Főoldal</button></a>
         <a href="termekek.html"><button class="termek">Termékeink</button></a> 
         <a href="akciok.html"><button>Akciók</button></a>
+        <a href="rolunk.html"><button>Kapcsolat</button></a>
     </header>
    
     <div class="card1">
